--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "xmd": "./bin/xmd.js"
+  },
   "author": "Howard Yeh",
   "license": "MIT",
   "devDependencies": {
     "chai": "^2.1.1",
     "mocha": "^2.2.1"
+  },
+  "dependencies": {
+    "minimist": "^1.1.1"
   }
 }
