--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^2.1.1",
-    "mocha": "^2.2.1"
+    "mocha": "^2.2.1",
+    "dts-generator": "git://github.com/SitePen/dts-generator"
   },
   "dependencies": {
     "minimist": "^1.1.1"
